--- a/src/components/Main/List/Post/Content/Content.module.css
+++ b/src/components/Main/List/Post/Content/Content.module.css
@@ -2,7 +2,7 @@
   grid-area: content;
   padding-top: 10px;
   padding-right: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 
 .linkPost {
@@ -10,8 +10,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   display: -webkit-box;
-  font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   transition: color 0.36s ease-in-out;
 }
 
@@ -29,15 +28,17 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   width: min-content;
-  color: #cc6633;
+  display: -webkit-box;
   transition: color 0.36s ease-in-out;
 }
 
-.linkAuthor:hover {
-  color: #2d2d2d;
-}
+@media (min-width: 580px) {
+  .content {
+    grid-area: content;
+    padding-top: 10px;
+    padding-right: 40px;
+  }
 
-@media (min-wifth: 580px) {
   .linkAuthor:hover {
     color: #2d2d2d;
   }
