--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @import "~normalize.css"; */
+@import "~normalize.css";
 
 @font-face {
   font-family: "Merriweather Sans";
@@ -49,6 +49,7 @@
   --greyBF: hsl(0, 0%, 75%);
   --grey99: hsl(0, 0%, 60%);
   --grey66: hsl(0, 0%, 40%);
+  --grey33: hsl(0, 0%, 20%);
 }
 
 html {
@@ -72,7 +73,8 @@ body {
   color: var(--black);
 }
 
-img {
+img,
+svg {
   max-width: 100%;
   height: auto;
 }
@@ -116,4 +118,3 @@ iframe {
   width: 1px;
   overflow: hidden;
 }
-
